# TwoPassword

./: README.md  manage.py  pyproject.toml  secret.key
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
pwdmanager/: admin.py  apps.py  crypter.py  models.py  urls.py  views.py
pwdmanager/migrations/: 0001_initial.py
screenshots/: README.md
templates/: base.html
templates/accounts/: account.html  login.html  logout.html  register.html
templates/pwdmanager/: home.html  pwd.html  view.html
tests/: test_twopassword.py
twopassword/: asgi.py  settings.py  urls.py  wsgi.py
